elide-model-config/src/test/resources/validator/invalid_schema/table_schema_with_multiple_errors.hjson
{
  // unsupported: additional property 'name'
  name: Geography
  tables:
  [
    {
      // unsupported: name contains '@'
      name: Country@10
      table: country
      // unsupported: cardinality value
      cardinality: Extra Large
      filterTemplate: countryIsoCode={{code}};startTime=={{start}}
      arguments:
      [
        {
          name: PI
          // unsupported: argument type
          type: Number
        }
        {
          // unsupported: grain is not allowed
          name: Grain
          type: Boolean
        }
        {
          // both tableSource and values are not supported. Choose One or None
          name: aggregation
          description: Aggregation
          type : TEXT
          values: ['SUM', 'MIN', 'MAX']
          tableSource:  {
              table: abc
              column: def
          }
          default: SUM
        }
      ]
      measures:
      [
        {
          name : highScore
          type : INTEGER
          description : very awesome score
          definition: 'MAX({{score}})'
          // unsupported: class name (@ is not allowed)
          maker: 'com.paiondata.elide.datastores.aggregation.query@DefaultMetricProjectionMaker.class'
          tags: ['PUBLIC']
        }
      ]
      dimensions:
      [
        {
          // unsupported: field name is 'id'
          name: id
          // unsupported: field type
          type: Float
          definition: "{{id}}"
          // unsupported: cardinality value
          cardinality: Extra small
          tableSource: {
             table: abc
             column: def
          }
        }
        {
          // unsupported: field name starts with '_'
          name: _region
          type: Text
          definition: "{{region}}"
          // unsupported: either values or table source is allowed not both
          values:
          [
            US
            HK
          ]
          tableSource: {
              table: abc
              column: def
          }
          // unsupported: tags should be array
          tags: PRIVATE
        }
        {
          name: createdOn
          // unsupported field type
          type: TIMEX
          definition: "{{create_on}}"
          grains:
          [{
            // unsupported grain type
            type: Days
          }]
        }
        {
          name: updatedOn
          type: Time
          definition: "{{updated_on}}"
          grains: [{
              type: month
          }]
        }
        {
          name: modifiedOn
          type: Time
          definition: "{{modified_on}}"
        }
      ]
    }
  ]
}
